Move assets inside assets folder

--- a/components.html
+++ b/components.html
@@ -362,16 +362,16 @@
               </ol>
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="img/img-8.jpg" alt="...">
+                  <img src="assets/img/img-8.jpg" alt="...">
                 </div>
                 <div class="item">
-                  <img src="img/img-7.jpg" alt="...">
+                  <img src="assets/img/img-7.jpg" alt="...">
                 </div>
                 <div class="item">
-                  <img src="img/img-6.jpg" alt="...">
+                  <img src="assets/img/img-6.jpg" alt="...">
                 </div>
                 <div class="item">
-                  <img src="img/img-5.jpg" alt="...">
+                  <img src="assets/img/img-5.jpg" alt="...">
                 </div>
               </div>
 
@@ -646,22 +646,22 @@
             <h3><b>Default</b></h3>
             <div class="col-lg-3">
               <a href="#" class="thumbnail">
-                <img src="img/img-1.jpg" alt="img">
+                <img src="assets/img/img-1.jpg" alt="img">
               </a>
             </div>
             <div class="col-lg-3">
               <a href="#" class="thumbnail">
-                <img src="img/img-2.jpg" alt="img">
+                <img src="assets/img/img-2.jpg" alt="img">
               </a>
             </div>
             <div class="col-lg-3">
               <a href="#" class="thumbnail">
-                <img src="img/img-3.jpg" alt="img">
+                <img src="assets/img/img-3.jpg" alt="img">
               </a>
             </div>
             <div class="col-lg-3">
               <a href="#" class="thumbnail">
-                <img src="img/img-4.jpg" alt="img">
+                <img src="assets/img/img-4.jpg" alt="img">
               </a>
             </div>
           </div>
@@ -671,7 +671,7 @@
             <h3><b>Custom</b></h3>
             <div class="col-lg-4">
               <div class="thumbnail">
-                <img src="img/img-1.jpg" alt="img">
+                <img src="assets/img/img-1.jpg" alt="img">
                 <div class="caption">
                   <h4><b>Thumbnail label</b></h4>
                   <p>Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus.</p>
@@ -681,7 +681,7 @@
             </div>
             <div class="col-lg-4">
               <div class="thumbnail">
-                <img src="img/img-2.jpg" alt="img">
+                <img src="assets/img/img-2.jpg" alt="img">
                 <div class="caption">
                   <h4><b>Thumbnail label</b></h4>
                   <p>Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus.</p>
@@ -691,7 +691,7 @@
             </div>
             <div class="col-lg-4">
               <div class="thumbnail">
-                <img src="img/img-3.jpg" alt="img">
+                <img src="assets/img/img-3.jpg" alt="img">
                 <div class="caption">
                   <h4><b>Thumbnail label</b></h4>
                   <p>Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus.</p>
