Add color swatches

--- a/css.html
+++ b/css.html
@@ -517,28 +517,28 @@
         <h2><b>Color Swatches</b></h2><br>
         <div class="row">
           <div class="col-lg-2">
-            <div class="well well-sm"></div>
-            <div class="well well-sm"></div>
+            <div class="well well-sm swatch" style="background: #26ec71;">#26ec71</div>
+            <div class="well well-sm swatch" style="background: #27a1ec;">#27a1ec</div>
           </div>
           <div class="col-lg-2">
-            <div class="well well-sm"></div>
-            <div class="well well-sm"></div>
+            <div class="well well-sm swatch" style="background: #5bd8ef;">#5bd8ef</div>
+            <div class="well well-sm swatch" style="background: #d54d35;">#d54d35</div>
           </div>
           <div class="col-lg-2">
-            <div class="well well-sm"></div>
-            <div class="well well-sm"></div>
+            <div class="well well-sm swatch" style="background: #8cbf26;">#8cbf26</div>
+            <div class="well well-sm swatch" style="background: rgb(0,172,238);">#00acee</div>
           </div>
           <div class="col-lg-2">
-            <div class="well well-sm"></div>
-            <div class="well well-sm"></div>
+            <div class="well well-sm swatch" style="background: #ef725b;">#ef725b</div>
+            <div class="well well-sm swatch" style="background: #476c73;">#476c73</div>
           </div>
           <div class="col-lg-2">
-            <div class="well well-sm"></div>
-            <div class="well well-sm"></div>
+            <div class="well well-sm swatch" style="background: #ec273e;">#ec273e</div>
+            <div class="well well-sm swatch" style="background: #1aa758;">#1aa758</div>
           </div>
           <div class="col-lg-2">
-            <div class="well well-sm"></div>
-            <div class="well well-sm"></div>
+            <div class="well well-sm swatch" style="background: #6e6e6e;">#6e6e6e</div>
+            <div class="well well-sm swatch" style="background: #f09156;">#f09156</div>
           </div>
         </div>
       </div>
