Add prism, code templates

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="jumbotron text-center">
         <h1>Paper</h1>
         <p>
-          Simple, Elegant & Flat <a href="http://getbootstrap.com">Bootstrap</a> Theme
+          Simple, Elegant &amp; Flat <a href="http://getbootstrap.com">Bootstrap</a> Theme
         </p>
         <p>
           Built with <a href="http://sass-lang.com/"><b>Sass</b></a>,
