--- a/components.html
+++ b/components.html
@@ -861,17 +861,15 @@
           allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
           <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&type=follow"
           allowtransparency="true" frameborder="0" scrolling="0" width="145" height="20"></iframe>
-          
-          <a class="twitter-share-button"
-            href="https://twitter.com/share"
-            data-via="sudharshan_iyer">Tweet</a>
+
+          <a class="twitter-share-button" href="https://twitter.com/share" data-via="sudharshan_iyer">Tweet</a>
           <div class="g-plusone" data-size="medium"></div>
         </div>
       </div>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="dist/js/paper.min.js"></script>
   <script type="text/javascript">
     window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
   </script>
