Change url everywhere

--- a/components.html
+++ b/components.html
@@ -6,8 +6,7 @@
   <title>Components - Paper</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="dist/css/paper.css">
+  <link rel="stylesheet" href="dist/css/paper.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body data-spy="scroll" data-target="#features-nav" style="position: relative;">
