--- a/getting-started.html
+++ b/getting-started.html
@@ -6,8 +6,7 @@
   <title>Getting Started - Paper</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="dist/css/paper.css">
+  <link rel="stylesheet" href="dist/css/paper.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body data-spy="scroll" data-target="#features-nav" style="position: relative;">
@@ -70,8 +69,8 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
+  <script type="text/javascript" src="dist/js/paper.min.js"></script>
   <script type="text/javascript">
     window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
   </script>
