Slider panel components

--- a/components.html
+++ b/components.html
@@ -45,6 +45,7 @@
           <li><a href="#carousel">Carousel</a></li>
           <li><a href="#alerts">Alerts</a></li>
           <li><a href="#labels">Labels</a></li>
+          <li><a href="#slider">Slider Panel</a></li>
           <li><a href="#progress-bars">Progress Bars</a></li>
           <li><a href="#panels">Panels</a></li>
           <li><a href="#wells">Wells</a></li>
@@ -431,6 +432,14 @@
             <span class="label label-danger">Danger</span>
           </div>
         </div>
+      </div>
+      <br><hr>
+      <div id="slider">
+        <h2><b>Slider Panel</b></h2>
+        <h4><b>What is it?</b></h4>
+        A simple slider panel implementation. It is an additional component integrated with Paper.
+        <h4><b>How to use it?</b></h4>
+        To use it check out the docs and demo here <a href="slider.html">Slider Docs</a>
       </div>
       <br><hr>
       <div id="progress-bars">
