Changes to footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/css/paper.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <nav class="navbar navbar-default" role="navigation">
@@ -48,33 +49,25 @@
       </div>
       </div>
     </div>
-  </div>
-  <br><br><hr>
-  <div class="container">
-    <div class="footer">
-      <div class="row">
-        <div class="col-lg-10 col-lg-offset-1 text-center">
-          <span>MIT License</span> | 
-          <span>Based on <a href="http://getbootstrap.com/">Bootstrap</a></span> |
-          <span>Design by <a href="https://github.com/sudharti">@sudharti</a></span> |
-          <span>Icons - <a href="http://fortawesome.github.io/Font-Awesome/icons/">Fontawesome</a></span> |
-          <span>Images from <a href="https://unsplash.com/">Unsplash</a></span>
-        </div>
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1 text-center">
+        <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=fork"
+          allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=watch"
+        allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
+        <a class="twitter-share-button" href="https://twitter.com/share" data-count="none" data-via="sudharshan_iyer">Tweet</a>
+        <div class="g-plusone" data-size="medium" data-align="right" data-annotation="bubble"></div>
       </div>
-      <br>
+    </div>
+  </div>
+  <br><br>
+  <div class="footer">
+    <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
-          <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=fork&count=true"
-          allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
-          <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=watch&count=true"
-          allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
-          <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&type=follow"
-          allowtransparency="true" frameborder="0" scrolling="0" width="145" height="20"></iframe>
-          
-          <a class="twitter-share-button"
-            href="https://twitter.com/share"
-            data-via="sudharshan_iyer">Tweet</a>
-          <div class="g-plusone" data-size="medium"></div>
+          <span>Released under MIT License</span> | 
+          <span>Built on <a href="http://getbootstrap.com/">Bootstrap</a></span> |
+          <span>Made by <a href="https://github.com/sudharti">sudharti</a></span>
         </div>
       </div>
     </div>
