Card component start

--- a/slider.html
+++ b/slider.html
@@ -58,7 +58,8 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-10 col-lg-offset-1">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h2><b>Slider Docs</b></h2>
           <pre data-src="templates/slider-template.html"></pre>
         </div>
       </div>
