Extras page, changes to gruntfile

--- a/css.html
+++ b/css.html
@@ -25,6 +25,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="css.html">CSS</a></li>
           <li><a href="components.html">Components</a></li>
+          <li><a href="extras.html">Extras</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="getting-started.html">Getting Started</a></li>
@@ -35,7 +36,7 @@
   </nav>
   <div class="container">
     <div class="col-lg-3">
-    <div id="features-nav" data-spy="affix">
+      <div id="features-nav" data-spy="affix">
         <br><h4><b>Components</b></h4>
         <ul class="nav nav-pills nav-stacked">
           <li><a href="#typography">Typography</a></li>
