--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <ul class="nav navbar-nav">
           <li><a href="css.html">CSS</a></li>
           <li><a href="components.html">Components</a></li>
+          <li><a href="extras.html">Extras</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="getting-started.html">Getting Started</a></li>
