--- a/components.html
+++ b/components.html
@@ -25,6 +25,7 @@
         <ul class="nav navbar-nav">
           <li><a href="css.html">CSS</a></li>
           <li class="active"><a href="components.html">Components</a></li>
+          <li><a href="extras.html">Extras</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="getting-started.html">Getting Started</a></li>
@@ -45,7 +46,6 @@
           <li><a href="#carousel">Carousel</a></li>
           <li><a href="#alerts">Alerts</a></li>
           <li><a href="#labels">Labels</a></li>
-          <li><a href="#slider">Slider Panel</a></li>
           <li><a href="#progress-bars">Progress Bars</a></li>
           <li><a href="#panels">Panels</a></li>
           <li><a href="#wells">Wells</a></li>
@@ -432,14 +432,6 @@
             <span class="label label-danger">Danger</span>
           </div>
         </div>
-      </div>
-      <br><hr>
-      <div id="slider">
-        <h2><b>Slider Panel</b></h2>
-        <h4><b>What is it?</b></h4>
-        A simple slider panel implementation. It is an additional component integrated with Paper.
-        <h4><b>How to use it?</b></h4>
-        To use it check out the docs and demo here <a href="slider.html">Slider Docs</a>
       </div>
       <br><hr>
       <div id="progress-bars">
