Pricing table complete

--- a/extras.html
+++ b/extras.html
@@ -215,7 +215,116 @@
         </div>
         <br><hr>
         <div id="pricing">
-          <h2><b>Pricing Tables</b></h2>
+          <h2><b>Pricing Tables</b></h2><br>
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="pricing-table">
+                <div class="header">
+                  <span class="title">$20</span>
+                  <span class="subtitle">every 50 transactions</span>
+                </div>
+                <div class="center">
+                  <h4 class="text-center"><b>Premium</b></h4>
+                  <ul>
+                    <li><i class="fa fa-check"></i> 6 months</li>
+                    <li><i class="fa fa-check"></i> Profile Management</li>
+                    <li><i class="fa fa-check"></i> SEO services</li>
+                    <li><i class="fa fa-check"></i> Rating</li>
+                    <li><i class="fa fa-check"></i> Reports/Analysis</li>
+                  </ul>
+                </div>
+                <div class="foot">
+                  <button class="btn btn-success">Select</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="pricing-table gold">
+                <div class="header">
+                  <span class="title">$20</span>
+                  <span class="subtitle">every 50 transactions</span>
+                </div>
+                <div class="center">
+                  <h4 class="text-center"><b>Gold</b></h4>
+                  <ul>
+                    <li><i class="fa fa-check"></i> 6 months</li>
+                    <li><i class="fa fa-check"></i> Profile Management</li>
+                    <li><i class="fa fa-check"></i> SEO services</li>
+                    <li><i class="fa fa-check"></i> Rating</li>
+                    <li><i class="fa fa-check"></i> Reports/Analysis</li>
+                  </ul>
+                </div>
+                <div class="foot">
+                  <button class="btn btn-success">Select</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="pricing-table basic">
+                <div class="header">
+                  <span class="title">$20</span>
+                  <span class="subtitle">every 50 transactions</span>
+                </div>
+                <div class="center">
+                  <h4 class="text-center"><b>Basic</b></h4>
+                  <ul>
+                    <li><i class="fa fa-check"></i> 6 months</li>
+                    <li><i class="fa fa-check"></i> Profile Management</li>
+                    <li><i class="fa fa-check"></i> SEO services</li>
+                    <li><i class="fa fa-check"></i> Rating</li>
+                    <li><i class="fa fa-check"></i> Reports/Analysis</li>
+                  </ul>
+                </div>
+                <div class="foot">
+                  <button class="btn btn-success">Select</button>
+                </div>
+              </div>
+            </div>
+          </div><br>
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="pricing-table enterprise">
+                <div class="header">
+                  <span class="title">$20</span>
+                  <span class="subtitle">every 50 transactions</span>
+                </div>
+                <div class="center">
+                  <h4 class="text-center"><b>Enterprise</b></h4>
+                  <ul>
+                    <li><i class="fa fa-check"></i> 6 months</li>
+                    <li><i class="fa fa-check"></i> Profile Management</li>
+                    <li><i class="fa fa-check"></i> SEO services</li>
+                    <li><i class="fa fa-check"></i> Rating</li>
+                    <li><i class="fa fa-check"></i> Reports/Analysis</li>
+                  </ul>
+                </div>
+                <div class="foot">
+                  <button class="btn btn-success">Select</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="pricing-table free">
+                <div class="header">
+                  <span class="title">$20</span>
+                  <span class="subtitle">every 50 transactions</span>
+                </div>
+                <div class="center">
+                  <h4 class="text-center"><b>Free</b></h4>
+                  <ul>
+                    <li><i class="fa fa-check"></i> 6 months</li>
+                    <li><i class="fa fa-check"></i> Profile Management</li>
+                    <li><i class="fa fa-check"></i> SEO services</li>
+                    <li><i class="fa fa-check"></i> Rating</li>
+                    <li><i class="fa fa-check"></i> Reports/Analysis</li>
+                  </ul>
+                </div>
+                <div class="foot">
+                  <button class="btn btn-success">Select</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <br><hr>
         <div id="slider">
