Extras page completed

--- a/extras.html
+++ b/extras.html
@@ -217,7 +217,7 @@
         <div id="pricing">
           <h2><b>Pricing Tables</b></h2><br>
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
               <div class="pricing-table">
                 <div class="header">
                   <span class="title">$20</span>
@@ -238,7 +238,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
               <div class="pricing-table gold">
                 <div class="header">
                   <span class="title">$20</span>
@@ -259,7 +259,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
               <div class="pricing-table basic">
                 <div class="header">
                   <span class="title">$20</span>
@@ -280,9 +280,9 @@
                 </div>
               </div>
             </div>
-          </div><br>
+          </div>
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
               <div class="pricing-table enterprise">
                 <div class="header">
                   <span class="title">$20</span>
@@ -303,7 +303,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
               <div class="pricing-table free">
                 <div class="header">
                   <span class="title">$20</span>
@@ -329,6 +329,10 @@
         <br><hr>
         <div id="slider">
           <h2><b>Slider Panel</b></h2>
+          <h4><b>What is it?</b></h4>
+          A simple slider panel implementation. It is an additional component integrated with Paper.
+          <h4><b>How to use it?</b></h4>
+          To use it check out the docs and demo here <a href="slider.html">Slider Docs</a>
         </div>
         <br><hr>
       </div>
