--- a/slider.html
+++ b/slider.html
@@ -45,6 +45,7 @@
           <ul class="nav navbar-nav">
             <li><a href="css.html">CSS</a></li>
             <li><a href="components.html">Components</a></li>
+            <li><a href="extras.html">Extras</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="getting-started.html">Getting Started</a></li>
@@ -59,7 +60,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2><b>Slider Docs</b></h2>
+          <h2><b>Slider Panel</b></h2>
           <pre data-src="templates/slider-template.html"></pre>
         </div>
       </div>
