Update extras page

--- a/slider.html
+++ b/slider.html
@@ -51,6 +51,8 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <h2><b>Slider Panel</b></h2>
+          <h3><b>Docs</b></h3><hr>
+          <h3><b>Example</b></h3><hr>
           <pre data-src="templates/slider-template.html"></pre>
         </div>
       </div>
