--- a/extras.html
+++ b/extras.html
@@ -334,11 +334,24 @@
           <h4><b>How to use it?</b></h4>
           To use it check out the docs and demo here <a href="slider.html">Slider Docs</a>
         </div>
-        <br><hr>
+        <br>
       </div>
     </div>
-    <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
-    <script type="text/javascript" src="dist/js/paper.min.js"></script>
-    <script type="text/javascript" src="templates/js/prism.js"></script>
-  </body>
-  </html>
+  </div>
+  <br><br>
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 col-lg-offset-1 text-center">
+          <span>Released under MIT License</span> | 
+          <span>Built on <a href="http://getbootstrap.com/">Bootstrap</a></span> |
+          <span>Made by <a href="https://github.com/sudharti">sudharti</a></span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
+  <script type="text/javascript" src="dist/js/paper.min.js"></script>
+  <script type="text/javascript" src="templates/js/prism.js"></script>
+</body>
+</html>
