Organize folders, files, paper v0.7.0

--- a/pages/css.html
+++ b/pages/css.html
@@ -6,8 +6,8 @@
   <title>CSS - Paper</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="dist/css/paper.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="../dist/css/paper.min.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body data-spy="scroll" data-target="#features-nav" style="position: relative;">
   <nav class="navbar navbar-default" role="navigation">
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Paper</a>
+        <a class="navbar-brand" href="../index.html">Paper</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -29,7 +29,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="getting-started.html">Getting Started</a></li>
-          <li><a href="templates/index.html">Templates</a></li>
+          <li><a href="../templates/index.html">Templates</a></li>
         </ul>
       </div>
     </div>
@@ -556,7 +556,7 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="dist/js/paper.min.js"></script>
+  <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
+  <script type="text/javascript" src="../dist/js/paper.min.js"></script>
 </body>
 </html>
