--- a/pages/slider.html
+++ b/pages/slider.html
@@ -6,9 +6,9 @@
   <title>Slider - Paper</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="dist/css/paper.min.css">
-  <link rel="stylesheet" href="templates/css/prism.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../dist/css/paper.min.css">
+  <link rel="stylesheet" href="../templates/css/prism.css">
 </head>
 <body data-slide="push">
   <div id="panel-left" class="mdm-panel">
@@ -39,7 +39,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="getting-started.html">Getting Started</a></li>
-            <li><a href="templates/index.html">Templates</a></li>
+            <li><a href="../templates/index.html">Templates</a></li>
           </ul>
         </div>
       </div>
@@ -53,13 +53,13 @@
           <h2><b>Slider Panel</b></h2>
           <h3><b>Docs</b></h3><hr>
           <h3><b>Example</b></h3><hr>
-          <pre data-src="templates/slider-template.html"></pre>
+          <pre data-src="../templates/slider-template.html"></pre>
         </div>
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="dist/js/paper.min.js"></script>
-  <script type="text/javascript" src="templates/js/prism.js"></script>
+  <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
+  <script type="text/javascript" src="../dist/js/paper.min.js"></script>
+  <script type="text/javascript" src="../templates/js/prism.js"></script>
 </body>
 </html>
