--- a/pages/components.html
+++ b/pages/components.html
@@ -6,8 +6,8 @@
   <title>Components - Paper</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="dist/css/paper.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="../dist/css/paper.min.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body data-spy="scroll" data-target="#features-nav" style="position: relative;">
   <nav class="navbar navbar-default" role="navigation">
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Paper</a>
+        <a class="navbar-brand" href="../index.html">Paper</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -29,7 +29,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="getting-started.html">Getting Started</a></li>
-          <li><a href="templates/index.html">Templates</a></li>
+          <li><a href="../templates/index.html">Templates</a></li>
         </ul>
       </div>
     </div>
@@ -362,16 +362,16 @@
               </ol>
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="assets/img/img-8.jpg" alt="...">
+                  <img src="../assets/img/img-8.jpg" alt="...">
                 </div>
                 <div class="item">
-                  <img src="assets/img/img-7.jpg" alt="...">
+                  <img src="../assets/img/img-7.jpg" alt="...">
                 </div>
                 <div class="item">
-                  <img src="assets/img/img-6.jpg" alt="...">
+                  <img src="../assets/img/img-6.jpg" alt="...">
                 </div>
                 <div class="item">
-                  <img src="assets/img/img-5.jpg" alt="...">
+                  <img src="../assets/img/img-5.jpg" alt="...">
                 </div>
               </div>
 
@@ -646,22 +646,22 @@
             <h3><b>Default</b></h3>
             <div class="col-lg-3">
               <a href="#" class="thumbnail">
-                <img src="assets/img/img-1.jpg" alt="img">
+                <img src="../assets/img/img-1.jpg" alt="img">
               </a>
             </div>
             <div class="col-lg-3">
               <a href="#" class="thumbnail">
-                <img src="assets/img/img-2.jpg" alt="img">
+                <img src="../assets/img/img-2.jpg" alt="img">
               </a>
             </div>
             <div class="col-lg-3">
               <a href="#" class="thumbnail">
-                <img src="assets/img/img-3.jpg" alt="img">
+                <img src="../assets/img/img-3.jpg" alt="img">
               </a>
             </div>
             <div class="col-lg-3">
               <a href="#" class="thumbnail">
-                <img src="assets/img/img-4.jpg" alt="img">
+                <img src="../assets/img/img-4.jpg" alt="img">
               </a>
             </div>
           </div>
@@ -671,7 +671,7 @@
             <h3><b>Custom</b></h3>
             <div class="col-lg-4">
               <div class="thumbnail">
-                <img src="assets/img/img-1.jpg" alt="img">
+                <img src="../assets/img/img-1.jpg" alt="img">
                 <div class="caption">
                   <h4><b>Thumbnail label</b></h4>
                   <p>Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus.</p>
@@ -681,7 +681,7 @@
             </div>
             <div class="col-lg-4">
               <div class="thumbnail">
-                <img src="assets/img/img-2.jpg" alt="img">
+                <img src="../assets/img/img-2.jpg" alt="img">
                 <div class="caption">
                   <h4><b>Thumbnail label</b></h4>
                   <p>Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus.</p>
@@ -691,7 +691,7 @@
             </div>
             <div class="col-lg-4">
               <div class="thumbnail">
-                <img src="assets/img/img-3.jpg" alt="img">
+                <img src="../assets/img/img-3.jpg" alt="img">
                 <div class="caption">
                   <h4><b>Thumbnail label</b></h4>
                   <p>Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus.</p>
@@ -852,7 +852,7 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="dist/js/paper.min.js"></script>
+  <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
+  <script type="text/javascript" src="../dist/js/paper.min.js"></script>
 </body>
 </html>
