Slider panel docs completed

--- a/pages/extras.html
+++ b/pages/extras.html
@@ -331,6 +331,14 @@
           <h2><b>Slider Panel</b></h2>
           <h4><b>What is it?</b></h4>
           A simple slider panel implementation. It is an additional component integrated with Paper.
+          <br><br>
+          <div class="row">
+            <div class="col-lg-10">
+              <div class="thumbnail">
+                <img src="../assets/img/slider.jpg" alt="slider">
+              </div>
+            </div>
+          </div>
           <h4><b>How to use it?</b></h4>
           To use it check out the docs and demo here <a href="slider.html">Slider Docs</a>
         </div>
