--- a/pages/extras.html
+++ b/pages/extras.html
@@ -52,7 +52,7 @@
         <h2><b>Cards</b></h2>
         <br>
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
             <div class="card">
               <div class="cover" data-fade="1500" data-duration="2500">
                 <ul class="cover-pics">
@@ -76,7 +76,7 @@
               </div>
             </div>            
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
             <div class="card">
               <div class="cover" data-cover="../assets/img/background-1.jpg">
                 <img src="../templates/img/avatar.png" alt="" class="avatar">
@@ -90,7 +90,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
             <div class="card">
               <div class="cover" data-cover="../assets/img/background-2.jpg">
                 <img src="../templates/img/avatar_3.png" alt="" class="avatar">
@@ -241,7 +241,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
               <div class="pricing-table gold">
                 <div class="header">
-                  <span class="title">$20</span>
+                  <span class="title">$60</span>
                   <span class="subtitle">every 50 transactions</span>
                 </div>
                 <div class="center">
@@ -262,7 +262,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
               <div class="pricing-table basic">
                 <div class="header">
-                  <span class="title">$20</span>
+                  <span class="title">$10</span>
                   <span class="subtitle">every 50 transactions</span>
                 </div>
                 <div class="center">
@@ -285,7 +285,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
               <div class="pricing-table enterprise">
                 <div class="header">
-                  <span class="title">$20</span>
+                  <span class="title">$80</span>
                   <span class="subtitle">every 50 transactions</span>
                 </div>
                 <div class="center">
@@ -306,7 +306,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
               <div class="pricing-table free">
                 <div class="header">
-                  <span class="title">$20</span>
+                  <span class="title">$0</span>
                   <span class="subtitle">every 50 transactions</span>
                 </div>
                 <div class="center">
