Start getting-started page

--- a/pages/getting-started.html
+++ b/pages/getting-started.html
@@ -37,6 +37,79 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1">
+        <h2><b>Getting Started</b></h2>
+        Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the source on <a href="#">Github</a>. Paper is built on <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a> and written using Sass.
+        <h4><b>Quick start</b></h4>
+        <h4><b>How to Customize it?</b></h4>
+        <div class="row">
+          <div class="col-lg-8">
+            <h5><b>File Structure</b></h5>
+          </div>
+          <div class="col-lg-8">
+            <pre>
+  paper/
+  ├── dist/
+  │   ├── css/
+  │   │   ├── fonts/
+  │   │   │   ├── Lato/
+  │   │   │   ├── FontAwesome.otf
+  │   │   │   ├── fontawesome-webfont.eot
+  │   │   │   ├── fontawesome-webfont.svg
+  │   │   │   ├── fontawesome-webfont.ttf
+  │   │   │   └── fontawesome-webfont.woff
+  │   │   │      
+  │   │   ├── font-awesome.css
+  │   │   ├── paper.css
+  │   │   ├── paper.css.map
+  │   │   └── paper.min.css
+  │   │
+  │   └── js/
+  │       ├── vendor/
+  │       ├── paper.js
+  │       └── paper.min.js
+  │   
+  ├── fonts/
+  │   └── Lato/
+  ├── assets/
+  │   ├── css/
+  │   └── img/
+  ├── src/
+  │   ├── js/
+  │   │   ├── bootstrap.js
+  │   │   ├── card.js
+  │   │   ├── jquery.backstretch.min.js
+  │   │   └── slidepanel.js
+  │   └── scss/
+  │       ├── bootstrap/
+  │       ├── components/
+  │       ├── _bootstrap.scss
+  │       └── paper.scss
+  ├── pages/
+  │   ├── components.html
+  │   ├── css.html
+  │   ├── extras.html
+  │   ├── getting-started.html
+  │   └── slider.html
+  ├── templates/
+  │   ├── css/
+  │   ├── img/
+  │   ├── js/
+  │   ├── index.html
+  │   ├── blog.html
+  │   ├── login.html
+  │   ├── timeline.html
+  │   └── landing.html
+  ├── index.html
+  ├── Gruntfile.js
+  ├── package.json
+  ├── bower.json
+  └── .jshintrc
+            </pre>
+          </div>
+        </div>
+        <h4><b>Grunt &amp; Bower</b></h4>
+        <h4><b>Additional Components</b></h4>
+        <h4><b>Free Templates</b></h4>
       </div>
     </div>
   </div>
