Move code templates into folder, change prism

--- a/pages/extras.html
+++ b/pages/extras.html
@@ -106,11 +106,14 @@
           </div>
         </div>
       </div>
+      <br>
+      <h4><b><i class="fa fa-code"></i> Sample Code</b></h4>
+      <pre data-src="../templates/code-templates/card-template.html"></pre>
       <br><hr>
       <div id="feed">
         <h2><b>Feed</b></h2><br>
         <div class="row">
-          <div class="col-lg-8 col-lg-offset-2">
+          <div class="col-lg-8">
             <div class="feed">
               <div class="micropost">
                 <div class="content">
@@ -213,6 +216,9 @@
             </div>
           </div>
         </div>
+        <br>
+        <h4><b><i class="fa fa-code"></i> Sample Code</b></h4>
+        <pre data-src="../templates/code-templates/feed-template.html"></pre>
         <br><hr>
         <div id="pricing">
           <h2><b>Pricing Tables</b></h2><br>
@@ -326,6 +332,9 @@
             </div>
           </div>
         </div>
+        <br>
+        <h4><b><i class="fa fa-code"></i> Sample Code</b></h4>
+        <pre data-src="../templates/code-templates/pricing-table-template.html"></pre>
         <br><hr>
         <div id="slider">
           <h2><b>Slider Panel</b></h2>
